[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypreroms"
version = "0.0.1"
authors = [
	{ name = "Gorka Solana Arteche", email = "gorsol@gmail.com"},
	]
description = ""
readme = "README.rst"
license = { file="LICENSE.txt"}
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	]

[project.urls]
"Homepage" = "https://github.com/gorsol/pypreroms"
"Bug Tracker" = "https://github.com/gorsol/pypreroms/issues"
